--- a/pages/creadoras.html
+++ b/pages/creadoras.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../src/css/creadoras.css">
     <title>Creadoras</title>
 </head>
 <body>
   <header>
     <nav>
         <div class="nav-title">
-            <h1 class="page-title">Creadoras</h1>
+            <h1 class="subtitle">Este proyecto ha sido creado por:</h1>
         </div> 
     </nav>
   </header>  
@@ -19,15 +19,17 @@
         <article class="card-flip">
             <div class="card-inner">
                 <div class="card-front">
-                    <h2 class="name">Luisa Silva Matínez</h2>
-                    <img src="fotos/me.PNG" alt="me" class="lulupicture">
+                    <h2 class="name">Nicole Guevara</h2>
+                    <img src="../public/nicole.jpg" alt="me" class="nicole-picture">
                 </div>
                 <div class="card-back">
-                    <a href="https://www.linkedin.com/in/luisa-silva-martinez" target="_blank">
-                        <img src="fotos/linkedin.webp" class="linkpicture">
-                    <a href="mailto:luiasilvamartinez1999@gmail.com">
-                        <img src="fotos/email.avif" class="emailpicture">
+                    <a href="https://www.linkedin.com/in/nicole-guevara-gutierres-7160b236b/" target="_blank">
+                        <img src="../public/linkedin.webp" class="linkpicture">
+                        <p class="linkedin">linkedin</p>
                     </a>
+                    <a href="mailto:nicole.guevaragutierrez@gmail.com">
+                        <img src="../public/email.avif" class="emailpicture">
+                        <p class="email">nicole.guevaragutierrez@gmail.com</p>
                     </a>       
                 </div>
             </div>
@@ -36,14 +38,16 @@
             <div class="card-inner">
                 <div class="card-front">
                     <h2 class="name">Luisa Silva Matínez</h2>
-                    <img src="fotos/me.PNG" alt="me" class="lulupicture">
+                    <img src="../public/me.PNG" alt="me" class="lulupicture">
                 </div>
                 <div class="card-back">
                     <a href="https://www.linkedin.com/in/luisa-silva-martinez" target="_blank">
-                        <img src="fotos/linkedin.webp" class="linkpicture">
-                    <a href="mailto:luiasilvamartinez1999@gmail.com">
-                        <img src="fotos/email.avif" class="emailpicture">
+                        <img src="../public/linkedin.webp" class="linkpicture">
+                        <p class="linkedin">linkedin</p>
                     </a>
+                    <a href="mailto:luiasilvamartinez1999@gmail.com">
+                        <img src="../public/email.avif" class="emailpicture">
+                        <p class="email">luisasilvamartinez@gmail.com</p>
                     </a>       
                 </div>
             </div>
@@ -52,15 +56,17 @@
             <div class="card-inner">
                 <div class="card-front">
                     <h2 class="name">Luisa Silva Matínez</h2>
-                    <img src="fotos/me.PNG" alt="me" class="lulupicture">
+                    <img src="../public/me.PNG" alt="me" class="lulupicture">
                 </div>
                 <div class="card-back">
                     <a href="https://www.linkedin.com/in/luisa-silva-martinez" target="_blank">
-                        <img src="fotos/linkedin.webp" class="linkpicture">
-                    <a href="mailto:luiasilvamartinez1999@gmail.com">
-                        <img src="fotos/email.avif" class="emailpicture">
+                        <img src="../public/linkedin.webp" class="linkpicture">
+                        <p class="linkedin">linkedin</p>
                     </a>
-                    </a>       
+                    <a href="mailto:luiasilvamartinez1999@gmail.com">
+                        <img src="../public/email.avif" class="emailpicture">
+                        <p class="email">luisasilvamartinez@gmail.com</p>
+                    </a>      
                 </div>
             </div>
         </article>
@@ -68,15 +74,17 @@
             <div class="card-inner">
                 <div class="card-front">
                     <h2 class="name">Luisa Silva Matínez</h2>
-                    <img src="fotos/me.PNG" alt="me" class="lulupicture">
+                    <img src="../public/me.PNG" alt="me" class="lulupicture">
                 </div>
                 <div class="card-back">
                     <a href="https://www.linkedin.com/in/luisa-silva-martinez" target="_blank">
-                        <img src="fotos/linkedin.webp" class="linkpicture">
-                    <a href="mailto:luiasilvamartinez1999@gmail.com">
-                        <img src="fotos/email.avif" class="emailpicture">
+                        <img src="../public/linkedin.webp" class="linkpicture">
+                        <p class="linkedin">linkedin</p>
                     </a>
-                    </a>       
+                    <a href="mailto:luiasilvamartinez1999@gmail.com">
+                        <img src="../public/email.avif" class="emailpicture">
+                        <p class="email">luisasilvamartinez@gmail.com</p>
+                    </a>     
                 </div>
             </div>
         </article>
@@ -84,15 +92,17 @@
             <div class="card-inner">
                 <div class="card-front">
                     <h2 class="name">Luisa Silva Matínez</h2>
-                    <img src="fotos/me.PNG" alt="me" class="lulupicture">
+                    <img src="../public/me.PNG" alt="me" class="lulupicture">
                 </div>
                 <div class="card-back">
                     <a href="https://www.linkedin.com/in/luisa-silva-martinez" target="_blank">
-                        <img src="fotos/linkedin.webp" class="linkpicture">
-                    <a href="mailto:luiasilvamartinez1999@gmail.com">
-                        <img src="fotos/email.avif" class="emailpicture">
+                        <img src="../public/linkedin.webp" class="linkpicture">
+                        <p class="linkedin">linkedin</p>
                     </a>
-                    </a>       
+                    <a href="mailto:luiasilvamartinez1999@gmail.com">
+                        <img src="../public/email.avif" class="emailpicture">
+                        <p class="email">luisasilvamartinez@gmail.com</p>
+                    </a>     
                 </div>
             </div>
         </article>
