--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,51 +8,87 @@
     <link rel="stylesheet" href="../src/css/donde-estoy.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <header>
         <div id="logo-container">
-        <a href="../index.html"><i class="arrow left"></i><h1><span id="atomic-numer">k19</span> POTASIO</h1></a>
-       </div>
+            <a href="../index.html"><i id="arrow-left-header"></i>
+                <h1><span id="atomic-numer">k<sup>19</sup></span> POTASIO</h1>
+            </a>
+        </div>
         <nav>
             <ul>
                 <li><a href="../pages/donde-estoy.html" target="_blank">Dónde estoy</a></li>
                 <li><a href="../pages/mi-importancia.html" target="_blank">Mi importancia</a></li>
                 <li><a href="../pages/curiosidades.html" target="_blank">Curiosidades</a></li>
                 <li><a href="../pages/creadoras.html" target="_blank">Creadoras</a></li>
+
             </ul>
-            </nav>
+        </nav>
     </header>
     <main>
         <div id="carousel-container">
             <h2>Dónde estoy</h2>
-        </div>
-        <div id="cards-container">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut lobortis ante a sem scelerisque, sit amet
+                fringilla diam condimentum. Proin elit nulla, vestibulum nec maximus eget, mattis nec leo. Suspendisse
+                tristique iaculis tortor nec consequat. Maecenas consequat urna odio, vestibulum faucibus est commodo
+                id. Donec vel dapibus dolor. Suspendisse condimentum euismod viverra. Phasellus imperdiet sagittis
+                sapien a mattis. Donec sit amet commodo justo.
 
+            </p>
+        </div>
+        <div>
+            <h3>Alimentación</h3>
+            <div id="cards-container">
+                <article class="card">
+                    <img src="https://www.soulflower.in/cdn/shop/articles/avocado-1_335cdafd-3f2d-4de4-a016-37f8476e6ecf.jpg?v=1724903357&width=1100"
+                        alt="Aguacate">
+                    <h4>Ejemplo 1</h4>
+                    <p>Contiene 485 mg de potasio por cada 100 g.</p>
+                </article>
+                <article class="card">
+                    <img src="https://www.soulflower.in/cdn/shop/articles/avocado-1_335cdafd-3f2d-4de4-a016-37f8476e6ecf.jpg?v=1724903357&width=1100"
+                        alt="Aguacate">
+                    <h4>Ejemplo 2</h4>
+                    <p>Contiene 485 mg de potasio por cada 100 g.</p>
+                </article>
+                <article class="card">
+                    <img src="https://www.soulflower.in/cdn/shop/articles/avocado-1_335cdafd-3f2d-4de4-a016-37f8476e6ecf.jpg?v=1724903357&width=1100"
+                        alt="Aguacate">
+                    <h4>Ejemplo 3</h4>
+                    <p>Contiene 485 mg de potasio por cada 100 g.</p>
+                </article>
+            </div>
         </div>
     </main>
-    <!---
+
     <footer>
         <div id="footer-nav">
 
         </div>
         <div id="footer-info">
-        <p>&copy; 2025 K. Todos los derechos reservados.</p>
+            <p>&copy; 2025 K<sup>19</sup> Potasio. Proyecto realizado en Factoría F5.</p>
         </div>
     </footer>
-    -->
+
     <script src="../src/js/donde-estoy.js"></script>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <!--Selecciona la pestaña activa del menú de navegación para ponerle la clase .active y después el color amarillo de fondo en CSS-->
     <script>
-    $(function(){
-        $('a').each(function(){
-            if ($(this).prop('href') == window.location.href) {
-                $(this).addClass('active'); $(this).parents('li').addClass('active');
-            }
+        $(function () {
+            $('a').each(function () {
+                if ($(this).prop('href') == window.location.href) {
+                    $(this).addClass('active'); $(this).parents('li').addClass('active');
+                }
+            });
         });
-    });
-</script>
+    </script>
 
 </body>
+
 </html>
