--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -69,7 +69,10 @@
 
     <footer>
         <div id="footer-nav">
-
+            <ul>
+            <li><a href="../index.html" target="_blank">Inicio</a></li>
+            <li><a href="../pages/mi-importancia.html" target="_blank">Mi importancia</a></li>
+            </ul>
         </div>
         <div id="footer-info">
             <p>&copy; 2025 K<sup>19</sup> Potasio. Proyecto realizado en Factoría F5.</p>
