added missed actualidad link on nav

--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -27,6 +27,7 @@
                 <li><a href="../pages/donde-estoy.html" target="_blank">Dónde estoy</a></li>
                 <li><a href="../pages/mi-importancia.html" target="_blank">Mi importancia</a></li>
                 <li><a href="../pages/curiosidades.html" target="_blank">Curiosidades</a></li>
+                <li><a href="../pages/actualidad.html" target="_blank">Actualidad</a></li>
                 <li><a href="../pages/creadoras.html" target="_blank">Creadoras</a></li>
 
             </ul>
