--- a/pages/curiosidades.html
+++ b/pages/curiosidades.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curiosidades</title>
+    <link rel="stylesheet" href="../src/css/curiosidades.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="nav-title">
+                <h1>CURIOSIDADES</h1>
+            </div>
+        </nav>
+    </header>
+    <section class="cards-curiosidades" id="cards-container">
+        <h2>VAMOS A JUGAR: ¿VERDADERO O FALSO?</h2>
+            <p class="subtitle">Haz click en las afirmaciones que son correctas</p>
+    </section>
+    <section class="cards-container">
+        <article class="card" data-truth="true">
+            <p>El potasio reacciona con el agua, explota y arde con una llama lila por la rápida liberación de hidrógeno</p>
+        </article>
+        <article class="card" data-truth="false" data-correct="El potasio se encuentra en muchos alimentos, no solo en plátanos. Es esencial para el cuerpo humano.">
+            <p>El potasio se encuentra exclusivamente en los plátanos, es la única fuente que tiene el ser humano de ingerirlo en alimentos</p>
+        </article>
+        <article class="card" data-truth="true">
+            <p>El potasio metálico debe guardarse en aceite porque reacciona con la humedad del aire</p>
+        </article>
+        <article class="card" data-truth="flase" data-corerct="El potasio es imprescindible para el cuerpo humano, participa en funciones vitales como la contracción muscular.">
+            <p>El potasio es bueno para el cuerpo humano pero no imprescindible</p>
+        </article>
+        <article class="card" data-truth="true">
+            <p>El potasio metálico es tan blando que se puede cortar con un cuchillo</p>
+        </article>
+        <article class="card" data-truth="flase" data-correct="El potasio no regula el oxígeno en la sangre, pero sí regula el equilibrio de líquidos y electrolitos.">
+            <p>El potasio regula la cantidad de oxígeno en la sangre</p>
+        </article>
+    </section>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span id="cerrar-modal" class="close-button">&times;</span>
+            <h2>¡INCORRECTO!</h2>
+            <p id="modal-text"></p>
+        </div>
+    </div>
 </body>
 </html>
