--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -44,7 +44,21 @@
                 <div class="carousel-item">
                     <img src="../public/bananas.png" alt="Bananas">
                 </div>
+                <div class="carousel-item">
+                    <img src="../public/aguacatepotasio.PNG" alt="Bananas">
+                </div>
+                <div class="carousel-item">
+                    <img src="../public/carne.png" alt="Bananas">
+                </div>
             </div>
+            <div id="carousel-nav">
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+
         </div>
         <div>
             <h3>Alimentación</h3>
