new message bubble

--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -42,13 +42,22 @@
             </p>
             <div id="carousel">
                 <div class="carousel-item">
+                    <p class="message">
+                        Mensaje de por qué es importante
+                    </p>
                     <img src="../public/bananas.png" alt="Bananas">
                 </div>
                 <div class="carousel-item">
-                    <img src="../public/aguacatepotasio.PNG" alt="Bananas">
+                    <p class="message">
+                        Mensaje de por qué es importante
+                    </p>
+                    <img src="../public/espinaca.jpg" alt="Espinacas">
                 </div>
                 <div class="carousel-item">
-                    <img src="../public/carne.png" alt="Bananas">
+                    <p class="message">
+                        Mensaje de por qué es importante
+                    </p>
+                    <img src="../public/avocado.jpg" alt="Aguacate">
                 </div>
             </div>
             <div id="carousel-nav">
