--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -42,18 +42,21 @@
             </p>
             <div id="carousel">
                 <div class="carousel-item">
+                    <h5>Plátanos</h5>
                     <p class="message">
                         Mensaje de por qué es importante
                     </p>
                     <img src="../public/bananas.png" alt="Bananas">
                 </div>
                 <div class="carousel-item">
+                    <h5>Espinacas</h5>
                     <p class="message">
                         Mensaje de por qué es importante
                     </p>
                     <img src="../public/espinaca.jpg" alt="Espinacas">
                 </div>
                 <div class="carousel-item">
+                    <h5>Aguacate</h5>
                     <p class="message">
                         Mensaje de por qué es importante
                     </p>
