--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Irina Tiron">
@@ -13,6 +12,13 @@
         href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="icon" type="image/png" href="../public/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="../public/favicon/favicon.svg">
+    <link rel="shortcut icon" href="../public/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="../public/favicon/apple-touch-icon.png">
+    <meta name="apple-mobile-web-app-title" content="Potasio">
+    <link rel="manifest" href="../public/favicon/site.webmanifest">
 </head>
 
 <body>
@@ -24,12 +30,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="../pages/donde-estoy.html" target="_blank">Dónde estoy</a></li>
-                <li><a href="../pages/mi-importancia.html" target="_blank">Mi importancia</a></li>
-                <li><a href="../pages/curiosidades.html" target="_blank">Curiosidades</a></li>
-                <li><a href="../pages/actualidad.html" target="_blank">Actualidad</a></li>
-                <li><a href="../pages/creadoras.html" target="_blank">Creadoras</a></li>
-
+                <li><a href="../pages/donde-estoy.html">Dónde estoy</a></li>
+                <li><a href="../pages/mi-importancia.html">Mi importancia</a></li>
+                <li><a href="../pages/curiosidades.html">Curiosidades</a></li>
+                <li><a href="../pages/actualidad.html">Actualidad</a></li>
+                <li><a href="../pages/creadoras.html">Creadoras</a></li>
             </ul>
         </nav>
     </header>
