--- a/pages/mi-importancia.html
+++ b/pages/mi-importancia.html
@@ -1,11 +1,118 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>¿Estás en riesgo de déficit de potasio?</title>
+  <link href="https://fonts.googleapis.com/css2?family=Kodchasan&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../src/css/mi-importancia.css" />
 </head>
+
 <body>
-    
+  <header>
+    <div id="logo-container">
+      <a href="../index.html"><i id="arrow-left-header"></i>
+        <h1><span id="atomic-numer">k<sup style="font-size: 0.6em"> 19</sup></span> POTASIO</h1>
+      </a>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="../pages/donde-estoy.html">Dónde estoy</a></li>
+        <li><a href="../pages/mi-importancia.html">Mi importancia</a></li>
+        <li><a href="../pages/curiosidades.html">Curiosidades</a></li>
+        <li><a href="../pages/actualidad.html">Actualidad</a></li>
+        <li><a href="../pages/creadoras.html">Creadoras</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+
+    <section class="seccion-potencia">
+      <div class="contenedor-flex">
+        <div class="texto-potencia">
+          <h1 class="titulo-potencia">
+            Ya sabes quién soy y dónde estoy,<br> ahora hablemos de por qué soy tan importante
+          </h1>
+          <p>
+            Soy fundamental para el cuerpo humano porque participo en procesos vitales que permiten que nuestro
+            organismo funcione correctamente. Sin mí, simplemente no podríamos vivir. 😎
+          </p>
+        </div>
+        <div class="imagen-potencia">
+          <img
+            src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExeGtpaGg5bjR4NXdkaGR0OG81b3Jxcm9vYTZ5bjcybDNsdG9oOWgwMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/5JC3Rc3nimbBxxgB6w/giphy.gif"
+            alt="Gif de potasio vital">
+        </div>
+      </div>
+    </section>
+
+    <!-- ----------- Mapa mental desplegable -------- -->
+    <section class="super-potasio">
+      <img src="../imagenes/imagen-super-potasio.png" alt="Haz clic para ver el mapa mental" id="imagen-disparadora">
+      <audio id="sonido-clic" src="sonidos/mixkit-orchestra-triumphant-trumpets-2285.wav" preload="auto"></audio>
+
+      <div id="overlay-mapa" style="display: none;">
+        <img src="../imagenes/mapa mental.png" alt="Mapa mental sobre el potasio" id="imagen-mapa">
+        <span id="cerrar-mapa">✖</span>
+      </div>
+    </section>
+
+    <!-- ----------- Encuesta -------- -->
+    <section class="evaluacion-potasio">
+      <h2>¿Estás en riesgo de tener bajo potasio?</h2>
+      <p>Responde estas preguntas para descubrir tu nivel de riesgo y aprende cómo mejorar.</p>
+
+      <form id="potassiumForm">
+
+        <fieldset class="pregunta activa">
+          <legend>1. ¿Cuántas frutas y verduras consumes al día?</legend>
+          <label><input type="radio" name="frutas" value="alta" required> Más de 5 porciones</label>
+          <label><input type="radio" name="frutas" value="media"> 2–4 porciones</label>
+          <label><input type="radio" name="frutas" value="baja"> Menos de 2 porciones</label>
+        </fieldset>
+
+        <fieldset class="pregunta">
+          <legend>2. ¿Tomas medicamentos diuréticos?</legend>
+          <label><input type="radio" name="diureticos" value="no" required> No</label>
+          <label><input type="radio" name="diureticos" value="si"> Sí</label>
+        </fieldset>
+
+        <fieldset class="pregunta">
+          <legend>3. ¿Con qué frecuencia haces ejercicio intenso?</legend>
+          <label><input type="radio" name="ejercicio" value="frecuente" required> Más de 4 veces por semana</label>
+          <label><input type="radio" name="ejercicio" value="ocasional"> 1–3 veces por semana</label>
+          <label><input type="radio" name="ejercicio" value="nunca"> Casi nunca</label>
+        </fieldset>
+
+        <fieldset class="pregunta">
+          <legend>4. ¿Consumes café, alcohol o bebidas energéticas regularmente?</legend>
+          <label><input type="radio" name="estimulantes" value="no" required> No</label>
+          <label><input type="radio" name="estimulantes" value="si"> Sí</label>
+        </fieldset>
+
+        <div class="botones">
+          <button type="button" id="btnAnterior" disabled>Anterior</button>
+          <button type="button" id="btnSiguiente">Siguiente</button>
+          <button type="submit" id="btnEnviar" style="display:none;">Enviar</button>
+        </div>
+      </form>
+    </section>
+
+    <section id="resultado" class="oculto">
+      <h2>Tu nivel de riesgo:</h2>
+      <div id="nivel"></div>
+      <p id="recomendacion"></p>
+    </section>
+
+  </main>
+
+  <footer>
+    <p>© 2025 Importancia del Potasio. Aprende, cuida y vive saludable.</p>
+  </footer>
+
+  <script src="../src/js/mi-importancia.js"></script>
 </body>
+
 </html>
