update imagen super potasio centrada y palpitante

--- a/pages/mi-importancia.html
+++ b/pages/mi-importancia.html
@@ -33,7 +33,7 @@
       <div class="contenedor-flex">
         <div class="texto-potencia">
           <h1 class="titulo-potencia">
-            Ya sabes quién soy y dónde estoy,<br> ahora hablemos de por qué soy tan importante
+            Ya sabes quién soy y dónde estoy,<br> ahora hablemos de por qué soy TAN IMPORTANTE
           </h1>
           <p>
             Soy fundamental para el cuerpo humano porque participo en procesos vitales que permiten que nuestro
@@ -51,7 +51,7 @@
     <!-- ----------- Mapa mental desplegable -------- -->
     <section class="super-potasio">
       <img src="../imagenes/imagen-super-potasio.png" alt="Haz clic para ver el mapa mental" id="imagen-disparadora">
-      <audio id="sonido-clic" src="sonidos/mixkit-orchestra-triumphant-trumpets-2285.wav" preload="auto"></audio>
+      <audio id="sonido-clic" src="../sonidos/mixkit-orchestra-triumphant-trumpets-2285.wav" preload="auto"></audio>
 
       <div id="overlay-mapa" style="display: none;">
         <img src="../imagenes/mapa mental.png" alt="Mapa mental sobre el potasio" id="imagen-mapa">
