--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Irina Tiron">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>K - Dónde estoy</title>
+    <link rel="stylesheet" href="../src/css/style.css">
     <link rel="stylesheet" href="../src/css/donde-estoy.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,9 +21,11 @@
     <link rel="apple-touch-icon" sizes="180x180" href="../public/favicon/apple-touch-icon.png">
     <meta name="apple-mobile-web-app-title" content="Potasio">
     <link rel="manifest" href="../public/favicon/site.webmanifest">
+
 </head>
 
 <body>
+
     <header>
         <div id="logo-container">
             <a href="../index.html"><i id="arrow-left-header"></i>
@@ -31,6 +34,7 @@
         </div>
         <nav class="topnav" id="myTopnav">
             <ul>
+                <li><a href="../pages/que-soy.html">Qué soy</a></li>
                 <li><a href="../pages/donde-estoy.html">Dónde estoy</a></li>
                 <li><a href="../pages/mi-importancia.html">Mi importancia</a></li>
                 <li><a href="../pages/curiosidades.html">Curiosidades</a></li>
@@ -136,7 +140,7 @@
             <p>&copy; 2025 K<sup style="font-size: 0.5em">19</sup> Potasio. Proyecto realizado en Factoría F5.</p>
         </div>
     </footer>
-
+    <script src="../src/js/script.js"></script>
     <script src="../src/js/donde-estoy.js"></script>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!--Selecciona la pestaña activa del menú de navegación para ponerle la clase .active y después el color amarillo de fondo en CSS / Con JQuery-->
