add code to que-soy page

--- a/pages/que-soy.html
+++ b/pages/que-soy.html
@@ -1,11 +1,130 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>El Potasio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link href="https://fonts.googleapis.com/css2?family=Kodchasan&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="que-soy.html">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
-    <h1>hola soy la pagina de quien soy</h1>
+
+  <div class="letrero">
+    <div class="contenido">
+      <img src="img/correcto.PNG" alt="Imagen de Mendeleyev">
+      <span class="animate__animated animate__bounceInDown">🎉¡Así es! Soy el potasio!</span>
+    </div>
+  </div>
+
+  <div class="contenedor-info">
+    <div class="texto">
+      <p>
+        El potasio es un elemento químico representado en la tabla periódica con el símbolo K, derivada del latín
+        <strong>Kalium</strong> que a su vez proviene del árabe <strong>al-galya</strong>, que significa "ceniza de plantas".<br><br>
+        Tiene un número atómico de 19. Es un metal alcalino de tono blanco plateado, que se encuentra comúnmente en la naturaleza,
+        especialmente en compuestos presentes en el agua salada y en diversos minerales.<br><br>
+      </p>
+    </div>
+    <div class="imagen">
+      <img src="img/Potasiomol.gif" alt="Potasiomol">
+    </div>
+  </div>
+
+
+  <table class="tabla-potasio">
+  <thead>
+    <tr>
+      <th>Propiedades</th>
+      <th>Potasio (K)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Símbolo químico</td>
+      <td>K</td>
+    </tr>
+    <tr>
+      <td>Número atómico</td>
+      <td>19</td>
+    </tr>
+    <tr>
+      <td>Masa atómica</td>
+      <td>39.10 u</td>
+    </tr>
+    <tr>
+      <td>Estado en condiciones normales</td>
+      <td>Sólido</td>
+    </tr>
+    <tr>
+      <td>Color</td>
+      <td>Blanco plateado</td>
+    </tr>
+    <tr>
+      <td>Grupo</td>
+      <td>Alcalino</td>
+    </tr>
+    <tr>
+      <td>Densidad</td>
+      <td>0.86 g/cm³</td>
+    </tr>
+    <tr>
+      <td>Punto de fusión</td>
+      <td>63.5 °C</td>
+    </tr>
+  </tbody>
+</table>
+
+
+<div class="card visible" id="card1">
+  <div class="card-inner">
+    <div class="face front">
+      <img src="img/potacio-explo copy.PNG" alt="Imagen Tarjeta 1" />
+    </div>
+    <div class="face back">
+     <p>Este metal tiene una reacción muy energética cuando se encuentra en lugares con humedad o entra en contacto con el agua. La reacción es tan intensa que puede provocar explosiones y genera una llama de tono violeta claro.
+        </p>
+    </div>
+  </div>
+</div>
+
+<div class="Mazo-tarjetas">
+  <div class="card" id="card2">
+    <div class="card-inner">
+      <div class="face front">
+         <img src="img/Potassiumballs.jpg" alt="Imagen Tarjeta 2" />
+      </div>
+    <div class="face back">
+      <p>El potasio posee un brillo plateado distintivo y es extremadamente blando, lo que permite cortarlo con facilidad usando un cuchillo. No obstante, al exponerse al aire se oxida con rapidez y pierde su brillo.</p>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="Mazo-tarjetas">
+  <div class="card" id="card2">
+    <div class="card-inner">
+      <div class="face front">
+         <img src="img/potaxio.PNG" alt="Imagen Tarjeta 3" />
+      </div>
+    <div class="face back">
+      <p>El potasio es un micronutriente esencial para la vida. En el cuerpo humano representa aproximadamente el 0,4% del peso corporal, y su ausencia impediría el correcto funcionamiento del organismo.</div>
+    </div>
+  </div>
+</div>
+
+<button id="siguiente" class="boton-siguiente">✨Dame clic!✨ (pero primero da clic a la tarjeta)</button>
+
+
+  <script src="que-soy.html"></script>
+
+  <script>
+    console.log("¡Bienvenido al mundo del potasio!");
+  </script>
+
+
+
 </body>
 </html>
