added footer style on style.css

--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -29,7 +29,7 @@
     <header>
         <div id="logo-container">
             <a href="../index.html"><i id="arrow-left-header"></i>
-                <h1><span id="atomic-numer">k<sup style="font-size: 0.6em"> 19</sup></span> POTASIO</h1>
+                <h1 id="pageTitle"><span id="atomic-numer">k<sup style="font-size: 0.6em"> 19</sup></span> POTASIO</h1>
             </a>
         </div>
         <nav class="topnav" id="myTopnav">
