code fixed on que-soy page

--- a/pages/que-soy.html
+++ b/pages/que-soy.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="https://fonts.googleapis.com/css2?family=Kodchasan&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="que-soy.html">
+  <link rel="stylesheet" href="/src/css/que-soy.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
 
   <div class="letrero">
     <div class="contenido">
-      <img src="img/correcto.PNG" alt="Imagen de Mendeleyev">
+    <img src="/public/correcto.PNG" alt="Imagen de Mendeleyev">
       <span class="animate__animated animate__bounceInDown">🎉¡Así es! Soy el potasio!</span>
     </div>
   </div>
@@ -28,7 +28,7 @@
       </p>
     </div>
     <div class="imagen">
-      <img src="img/Potasiomol.gif" alt="Potasiomol">
+      <img src="/public/Potasiomol.gif" alt="Potasiomol">
     </div>
   </div>
 
@@ -80,7 +80,7 @@
 <div class="card visible" id="card1">
   <div class="card-inner">
     <div class="face front">
-      <img src="img/potacio-explo copy.PNG" alt="Imagen Tarjeta 1" />
+      <img src="/public/potacio-explo copy.PNG" alt="Imagen Tarjeta 1" />
     </div>
     <div class="face back">
      <p>Este metal tiene una reacción muy energética cuando se encuentra en lugares con humedad o entra en contacto con el agua. La reacción es tan intensa que puede provocar explosiones y genera una llama de tono violeta claro.
@@ -93,7 +93,7 @@
   <div class="card" id="card2">
     <div class="card-inner">
       <div class="face front">
-         <img src="img/Potassiumballs.jpg" alt="Imagen Tarjeta 2" />
+         <img src="/public/Potassiumballs.jpg" alt="Imagen Tarjeta 2" />
       </div>
     <div class="face back">
       <p>El potasio posee un brillo plateado distintivo y es extremadamente blando, lo que permite cortarlo con facilidad usando un cuchillo. No obstante, al exponerse al aire se oxida con rapidez y pierde su brillo.</p>
@@ -107,7 +107,7 @@
   <div class="card" id="card2">
     <div class="card-inner">
       <div class="face front">
-         <img src="img/potaxio.PNG" alt="Imagen Tarjeta 3" />
+         <img src="/public/potaxio.PNG" alt="Imagen Tarjeta 3" />
       </div>
     <div class="face back">
       <p>El potasio es un micronutriente esencial para la vida. En el cuerpo humano representa aproximadamente el 0,4% del peso corporal, y su ausencia impediría el correcto funcionamiento del organismo.</div>
@@ -118,7 +118,7 @@
 <button id="siguiente" class="boton-siguiente">✨Dame clic!✨ (pero primero da clic a la tarjeta)</button>
 
 
-  <script src="que-soy.html"></script>
+  <script src="/src/js/que-soy.js"></script>
 
   <script>
     console.log("¡Bienvenido al mundo del potasio!");
