--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -34,12 +34,12 @@
         </div>
         <nav class="topnav" id="myTopnav">
             <ul>
-                <li><a href="../pages/que-soy.html">Qué soy</a></li>
-                <li><a href="../pages/donde-estoy.html">Dónde estoy</a></li>
-                <li><a href="../pages/mi-importancia.html">Mi importancia</a></li>
-                <li><a href="../pages/curiosidades.html">Curiosidades</a></li>
-                <li><a href="../pages/actualidad.html">Actualidad</a></li>
-                <li><a href="../pages/creadoras.html">Creadoras</a></li>
+                <li id="que-soy-li-link"><a href="../pages/que-soy.html">Qué soy</a></li>
+                <li id="donde-estoy-li-link"><a href="../pages/donde-estoy.html">Dónde estoy</a></li>
+                <li id="mi-importancia-li-link"><a href="../pages/mi-importancia.html">Mi importancia</a></li>
+                <li id="curiosidades-li-link"><a href="../pages/curiosidades.html">Curiosidades</a></li>
+                <li id="actualidad-li-link"><a href="../pages/actualidad.html">Actualidad</a></li>
+                <li id="creadoras-li-link"><a href="../pages/creadoras.html">Creadoras</a></li>
                 <li id="fa-bars-menu"><a href="javascript:void(0);" class="icon" onclick="responsiveNav()">
                         <i class="fa fa-bars"></i></a></li>
             </ul>
@@ -132,7 +132,7 @@
     <footer>
         <div id="footer-nav">
             <ul>
-                <li><a href="../index.html"><i id="arrow-left-footer"></i>Inicio</a></li>
+                <li><a href="../que-soy.html"><i id="arrow-left-footer"></i>Qué soy</a></li>
                 <li><a href="../pages/mi-importancia.html">Mi importancia<i id="arrow-right-footer"></i></a></li>
             </ul>
         </div>
