added eventListener to fa fa-bars

--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -41,7 +41,7 @@
                 <li id="actualidad-li-link"><a href="../pages/actualidad.html">Actualidad</a></li>
                 <li id="creadoras-li-link"><a href="../pages/creadoras.html">Creadoras</a></li>
                 <li id="fa-bars-menu"><a href="javascript:void(0);" class="icon" onclick="responsiveNav()">
-                        <i class="fa fa-bars"></i></a></li>
+                        <i class="fa fa-bars" id="openMenu"></i></a></li>
             </ul>
         </nav>
     </header>
